[gd_scene load_steps=12 format=2]

[ext_resource path="res://Art/BackIcon.png" type="Texture" id=1]
[ext_resource path="res://Art/DumbbellIcon.png" type="Texture" id=2]
[ext_resource path="res://Art/ProficiencyIcon.png" type="Texture" id=3]
[ext_resource path="res://Fonts/SmallText.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scripts/ExercisePanel.gd" type="Script" id=5]
[ext_resource path="res://Art/HamburgerIcon.png" type="Texture" id=6]
[ext_resource path="res://Art/SmallIcons/ChestIcon_Small.png" type="Texture" id=7]
[ext_resource path="res://Art/SmallIcons/ProficiencyIcon_Small.png" type="Texture" id=8]
[ext_resource path="res://Art/SmallIcons/TimerIcon_Small.png" type="Texture" id=9]
[ext_resource path="res://Scenes/ProficiencyProgress.tscn" type="PackedScene" id=10]
[ext_resource path="res://Art/SmallIcons/MoneyIcon_Small.png" type="Texture" id=11]

[node name="ExercisePanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.422
anchor_top = 0.361
anchor_right = 0.578
anchor_bottom = 0.639
margin_left = -0.160034
margin_top = 0.0799866
margin_right = 0.159973
margin_bottom = -0.0800476

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 284.0
margin_bottom = 30.0

[node name="Button_Name" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 250.0
margin_bottom = 30.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Exercise Name"

[node name="MenuButton" type="MenuButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 254.0
margin_right = 284.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
shortcut_in_tooltip = false
icon = ExtResource( 6 )
icon_align = 1
expand_icon = true
items = [ "$0.00", ExtResource( 11 ), 0, false, false, 0, 0, null, "", false, "0.000s", ExtResource( 9 ), 0, false, false, 1, 0, null, "", false, "0xp", ExtResource( 7 ), 0, false, false, 2, 0, null, "", false, "1xp", ExtResource( 8 ), 0, false, false, 3, 0, null, "", false ]

[node name="HBox_Icons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 284.0
margin_bottom = 114.0
size_flags_vertical = 3
alignment = 1

[node name="Texture_Muscle" type="TextureRect" parent="VBoxContainer/HBox_Icons"]
margin_right = 140.0
margin_bottom = 80.0
rect_min_size = Vector2( 56, 56 )
size_flags_horizontal = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Texture_Type" type="TextureRect" parent="VBoxContainer/HBox_Icons"]
margin_left = 144.0
margin_right = 284.0
margin_bottom = 80.0
rect_min_size = Vector2( 56, 56 )
size_flags_horizontal = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="HBox_Proficiency" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 118.0
margin_right = 284.0
margin_bottom = 199.0
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBox_Proficiency"]
margin_right = 56.0
margin_bottom = 81.0
rect_min_size = Vector2( 56, 56 )
hint_tooltip = "Proficiency"
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="ProficiencyProgress" parent="VBoxContainer/HBox_Proficiency" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 60.0
margin_right = 284.0
margin_bottom = 81.0
size_flags_horizontal = 3

[node name="Timer_MissingReq" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button_Name" to="." method="_on_Button_Name_pressed"]
[connection signal="timeout" from="Timer_MissingReq" to="." method="_on_Timer_MissingReq_timeout"]
